--- a/www/index.html
+++ b/www/index.html
@@ -42,8 +42,8 @@
 
         <div class="logo_container">
             <div class="logo">
-            <img src="css/css/images/logo3.png" alt="shell" title="shell" />
-            <h2>Shell</h2>
+            <!-- <img src="css/css/images/logo3.png" alt="shell" title="shell" /> -->
+            <!-- <h2>Shell</h2> -->
             <span></span>                        
             </div>                     
         </div>
