--- a/www/index.html
+++ b/www/index.html
@@ -38,16 +38,15 @@
         <div class="nav_center_logo"></div>
         <div class="clear"></div>
     </div>
-            <div role="main" class="ui-content">
+    <div role="main" class="ui-content">
 
         <div class="logo_container">
             <div class="logo">
-            <!-- <img src="css/css/images/logo3.png" alt="shell" title="shell" /> -->
+            <img src="css/css/images/logo-mobile.png" alt="" title="" />
             <!-- <h2>Shell</h2> -->
             <span></span>                        
             </div>                     
         </div>
-
     </div>
 
 
