--- a/www/index.html
+++ b/www/index.html
@@ -32,12 +32,12 @@
     </script> -->
 <body>
 
-<div data-role="page" id="homepage"  data-theme="b" class="">
+<!-- <div data-role="page" id="homepage"  data-theme="b" class=""> -->
 
-    <div data-role="" data-position="fixed">
+    <!-- <div data-role="" data-position="fixed">
         <div class="nav_center_logo"></div>
         <div class="clear"></div>
-    </div>
+    </div> -->
     <div role="main" class="ui-content">
 
         <div class="logo_container">
