--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
         <div class="nav_center_logo"></div>
         <div class="clear"></div>
     </div> -->
-    <div role="main" class="ui-content">
+    <div role="main" class="">
 
         <div class="logo_container">
             <div class="logo">
